# tauev

./: .gitignore  BUILD.bazel  CMakeLists.txt  WORKSPACE  tauev.pc.in  tauevConfig.cmake.in
example/: CMakeLists.txt
example/logger/: logger.cc
include/tauev/: logger.h  noncopyable.h  tauev.h
src/: CMakeLists.txt  logger.cc  timestamp.h
